# nemo-guardrails-poc

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: __init__.py  agent.py  main.py  tools.py
guardrails/: __init__.py  actions.py  audit.py  guardrails_agent.py  main.py
guardrails/config/: config.yml  rails.co
scripts/: demo_attacks.py
tests/: test_actions.py  test_attacks.py
